Embellish: fixes on tablet size

--- a/assets/stylesheets/_button.scss
+++ b/assets/stylesheets/_button.scss
@@ -19,3 +19,10 @@
         color: $white;
     }
 }
+
+/* Tablet (portrait and landscape) */
+@media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
+    .gold-btn {
+        font-size: 0.8rem;
+    }
+}
