--- a/assets/stylesheets/_specialities.scss
+++ b/assets/stylesheets/_specialities.scss
@@ -60,6 +60,10 @@ section#specialities-grid {
         height: 50vw;
     }
 
+    .spec-content {
+        width: 90%;
+    }
+
     .dish p {
         font-size: 1.5vw;
     }
